--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -21,7 +21,7 @@
     <div class="container-fluid header p-0">
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark   ">
             <div class="container-fluid ">
-                <a class="navbar-brand" href="#">picture</a>
+                <a class="navbar-brand" href="#">picdture</a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent">
