--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -35,10 +35,10 @@
                             <a class="nav-link active" href="#about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Projects</a>
+                            <a class="nav-link" href="#projects">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Skills</a>
+                            <a class="nav-link" href="#skills">Skills</a>
                         </li>
                     </ul>
 
@@ -79,7 +79,7 @@
                 </p>
             </div>
         </div>
-        <div class="row projects-row" id="Projects">
+        <div class="row projects-row" id="projects">
             <div class="col-sm-6 col-md-3">
                 <div class="card" style="width: 100%;">
                     <div class="pic-container"><img src="dog1.jpg" class="card-img-top" alt="dog"></div>
